[gd_scene load_steps=4 format=3 uid="uid://dac4wdpauojkq"]

[ext_resource type="Script" path="res://scripts/in_game_options.gd" id="1_er03j"]
[ext_resource type="Theme" uid="uid://ds0v7jv413dka" path="res://themes/MainTheme.tres" id="2_eldu7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ko127"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="Control" type="CanvasLayer"]
script = ExtResource("1_er03j")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_eldu7")
theme_override_styles/panel = SubResource("StyleBoxFlat_ko127")

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_eldu7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 100
text = "Resume
"

[node name="VibrationHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VibrationLabel" type="Label" parent="PanelContainer/VBoxContainer/VibrationHBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Vibration"

[node name="VibrationCheckButton" type="CheckButton" parent="PanelContainer/VBoxContainer/VibrationHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="SoundHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="SoundLabel" type="Label" parent="PanelContainer/VBoxContainer/SoundHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 80
text = "Sound"

[node name="SoundCheckButton" type="CheckButton" parent="PanelContainer/VBoxContainer/SoundHBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 10

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Exit menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
